fix overlapping resume buttons on mobile

--- a/src/css/index_styles.css
+++ b/src/css/index_styles.css
@@ -3,3 +3,9 @@
   margin-bottom: 30px;
   overflow-y: auto;
 }
+
+@media (max-width: 480px) {
+  .view-resume {
+    margin-bottom: 34px;
+  }
+}
